--- a/docs/docs/cmd/pa/app/app-list.mdx
+++ b/docs/docs/cmd/pa/app/app-list.mdx
@@ -15,7 +15,7 @@ m365 pa app list [options]
 ## Options
 
 ```md definition-list
-`-e, --environment [environment]`
+`-e, --environmentName [environmentName]`
 : The name of the environment for which to retrieve available apps
 
 `--asAdmin`
@@ -47,7 +47,7 @@ m365 pa app list
 List all apps in a given environment
 
 ```sh
-m365 pa app list --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --asAdmin
+m365 pa app list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --asAdmin
 ```
 
 ## Response
