--- a/docs/docs/cmd/pp/chatbot/chatbot-get.mdx
+++ b/docs/docs/cmd/pp/chatbot/chatbot-get.mdx
@@ -15,7 +15,7 @@ m365 pp chatbot get [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-i, --id [id]`
@@ -35,25 +35,25 @@ m365 pp chatbot get [options]
 Get a specific chatbot in a specific environment based on name
 
 ```sh
-m365 pp chatbot get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Chatbot"
+m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Chatbot"
 ```
 
 Get a specific chatbot in a specific environment based on name as admin
 
 ```sh
-m365 pp chatbot get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Chatbot" --asAdmin
+m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Chatbot" --asAdmin
 ```
 
 Get a specific chatbot in a specific environment based on id
 
 ```sh
-m365 pp chatbot get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "3a081d91-5ea8-40a7-8ac9-abbaa3fcb893"
+m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "3a081d91-5ea8-40a7-8ac9-abbaa3fcb893"
 ```
 
 Get a specific chatbot in a specific environment based on id as admin
 
 ```sh
-m365 pp chatbot get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "3a081d91-5ea8-40a7-8ac9-abbaa3fcb893" --asAdmin
+m365 pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "3a081d91-5ea8-40a7-8ac9-abbaa3fcb893" --asAdmin
 ```
 
 ## Response
@@ -135,7 +135,7 @@ m365 pp chatbot get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
   <TabItem value="Markdown">
 
   ```md
-  # pp chatbot get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "3a081d91-5ea8-40a7-8ac9-abbaa3fcb893"
+  # pp chatbot get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "3a081d91-5ea8-40a7-8ac9-abbaa3fcb893"
 
   Date: 9/1/2023
 
