--- a/docs/docs/cmd/pp/solution/solution-publisher-list.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-list.mdx
@@ -15,7 +15,7 @@ m365 pp solution publisher list [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment
 
 `--includeMicrosoftPublishers`
@@ -32,13 +32,13 @@ m365 pp solution publisher list [options]
 List all publishers in a specific environment
 
 ```sh
-m365 pp solution publisher list --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
+m365 pp solution publisher list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
 ```
 
 List all publishers in a specific environment as Admin
 
 ```sh
-m365 pp solution publisher list --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --asAdmin
+m365 pp solution publisher list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --asAdmin
 ```
 
 ## Response
@@ -82,7 +82,7 @@ m365 pp solution publisher list --environment "Default-2ca3eaa5-140f-4175-8261-3
   <TabItem value="Markdown">
 
   ```md
-  # pp solution publisher list --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
+  # pp solution publisher list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
   
   Date: 9/1/2023
 
