--- a/docs/docs/cmd/pa/app/app-consent-set.mdx
+++ b/docs/docs/cmd/pa/app/app-consent-set.mdx
@@ -13,7 +13,7 @@ m365 pa app consent set [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-n, --name <name>`
@@ -37,13 +37,13 @@ This command only works for canvas apps.
 Enables the bypass for the specified canvas app
 
 ```sh
-m365 pa app consent set --environment 4be50206-9576-4237-8b17-38d8aadfaa36 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --bypass true
+m365 pa app consent set --environmentName 4be50206-9576-4237-8b17-38d8aadfaa36 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --bypass true
 ```
 
 Disables the bypass consent for the specified canvas app
 
 ```sh
-m365 pa app consent set --environment 4be50206-9576-4237-8b17-38d8aadfaa36 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --bypass false --force
+m365 pa app consent set --environmentName 4be50206-9576-4237-8b17-38d8aadfaa36 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --bypass false --force
 ```
 
 ## Response
