--- a/docs/docs/cmd/pp/aibuildermodel/aibuildermodel-list.mdx
+++ b/docs/docs/cmd/pp/aibuildermodel/aibuildermodel-list.mdx
@@ -15,7 +15,7 @@ m365 pp aibuildermodel list [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment
 
 `--asAdmin`
@@ -29,13 +29,13 @@ m365 pp aibuildermodel list [options]
 List all AI Builder models in a specific environment
 
 ```sh
-m365 pp aibuildermodel list --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
+m365 pp aibuildermodel list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
 ```
 
 List all AI Builder models in a specific environment as admin
 
 ```sh
-m365 pp aibuildermodel list --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --asAdmin
+m365 pp aibuildermodel list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --asAdmin
 ```
 
 ## Response
@@ -107,7 +107,7 @@ m365 pp aibuildermodel list --environment "Default-d87a7535-dd31-4437-bfe1-95340
   <TabItem value="Markdown">
 
   ```md
-  # pp aibuildermodel list --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
+  # pp aibuildermodel list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
 
   Date: 9/1/2023
 
