--- a/docs/docs/cmd/pp/aibuildermodel/aibuildermodel-remove.mdx
+++ b/docs/docs/cmd/pp/aibuildermodel/aibuildermodel-remove.mdx
@@ -13,7 +13,7 @@ m365 pp aibuildermodel remove [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-i, --id [id]`
@@ -36,19 +36,19 @@ m365 pp aibuildermodel remove [options]
 Removes the AI builder model owned by the currently signed-in user based on the name parameter
 
 ```sh
-m365 pp aibuildermodel remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "AI Builder Model Name"
+m365 pp aibuildermodel remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "AI Builder Model Name"
 ```
 
 Removes the AI builder model owned by the currently signed-in user based on the name parameter without confirmation
 
 ```sh
-m365 pp aibuildermodel remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "AI Builder Model Name" --force
+m365 pp aibuildermodel remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "AI Builder Model Name" --force
 ```
 
 Removes the AI builder model owned by another user based on the id parameter
 
 ```sh
-m365 pp aibuildermodel remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e  --asAdmin
+m365 pp aibuildermodel remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e  --asAdmin
 ```
 
 
