--- a/docs/docs/cmd/pp/card/card-clone.mdx
+++ b/docs/docs/cmd/pp/card/card-clone.mdx
@@ -15,7 +15,7 @@ m365 pp card clone [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `--newName <newName>`
@@ -38,25 +38,25 @@ m365 pp card clone [options]
 Clones a specific card in a specific environment based on name.
 
 ```sh
-m365 pp card clone --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card" --newName "CLI 365 new Card"
+m365 pp card clone --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card" --newName "CLI 365 new Card"
 ```
 
 Clones a specific card in a specific environment based on name as admin.
 
 ```sh
-m365 pp card clone --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card" --newName "CLI 365 new Card" --asAdmin 
+m365 pp card clone --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card" --newName "CLI 365 new Card" --asAdmin 
 ```
 
 Clones a specific card in a specific environment based on id.
 
 ```sh
-m365 pp card clone --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --newName "CLI 365 new Card"
+m365 pp card clone --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --newName "CLI 365 new Card"
 ```
 
 Clones a specific card in a specific environment based on id as admin.
 
 ```sh
-m365 pp card clone --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --newName "CLI 365 new Card" --asAdmin
+m365 pp card clone --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --newName "CLI 365 new Card" --asAdmin
 ```
 
 ## Response
@@ -89,7 +89,7 @@ m365 pp card clone --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" 
   <TabItem value="Markdown">
 
   ```md
-  # pp card clone --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --newName "CLI 365 new Card"
+  # pp card clone --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --newName "CLI 365 new Card"
 
   Date: 9/1/2023
 
