--- a/docs/docs/cmd/pp/card/card-get.mdx
+++ b/docs/docs/cmd/pp/card/card-get.mdx
@@ -15,7 +15,7 @@ m365 pp card get [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-i, --id [id]`
@@ -35,25 +35,25 @@ m365 pp card get [options]
 Get a specific card in a specific environment based on name
 
 ```sh
-m365 pp card get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card"
+m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card"
 ```
 
 Get a specific card in a specific environment based on name as admin
 
 ```sh
-m365 pp card get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card" --asAdmin
+m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "CLI 365 Card" --asAdmin
 ```
 
 Get a specific card in a specific environment based on id
 
 ```sh
-m365 pp card get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa"
+m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa"
 ```
 
 Get a specific card in a specific environment based on id as admin
 
 ```sh
-m365 pp card get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --asAdmin
+m365 pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "408e3f42-4c9e-4c93-8aaf-3cbdea9179aa" --asAdmin
 ```
 
 ## Response
@@ -134,7 +134,7 @@ m365 pp card get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --
   <TabItem value="Markdown">
 
   ```md
-  # pp card get --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "0eab9392-7354-ed11-bba2-000d3adf774e"
+  # pp card get --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --id "0eab9392-7354-ed11-bba2-000d3adf774e"
 
   Date: 9/1/2023
 
