--- a/docs/docs/cmd/pp/card/card-list.mdx
+++ b/docs/docs/cmd/pp/card/card-list.mdx
@@ -15,7 +15,7 @@ m365 pp card list [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `--asAdmin`
@@ -29,13 +29,13 @@ m365 pp card list [options]
 List cards in a specific environment.
 
 ```sh
-m365 pp card list --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
+m365 pp card list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
 ```
 
 List cards in a specific environment as admin.
 
 ```sh
-m365 pp card list --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --asAdmin
+m365 pp card list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --asAdmin
 ```
 
 ## Response
@@ -116,7 +116,7 @@ m365 pp card list --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" -
   <TabItem value="Markdown">
 
   ```md
-  # pp card list --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
+  # pp card list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5"
 
   Date: 9/1/2023
 
