--- a/docs/docs/cmd/pp/card/card-remove.mdx
+++ b/docs/docs/cmd/pp/card/card-remove.mdx
@@ -13,7 +13,7 @@ m365 pp card remove [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-i, --id [id]`
@@ -36,49 +36,49 @@ m365 pp card remove [options]
 Removes the specified Microsoft Power Platform card owned by the currently signed-in user based on the name parameter
 
 ```sh
-m365 pp card remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Card Name"
+m365 pp card remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Card Name"
 ```
 
 Removes the specified Microsoft Power Platform card owned by the currently signed-in user based on the name parameter without confirmation
 
 ```sh
-m365 pp card remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Card Name" --force
+m365 pp card remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Card Name" --force
 ```
 
 Removes the specified Microsoft Power Platform card owned by another user based on the name parameter
 
 ```sh
-m365 pp card remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Card Name" --asAdmin
+m365 pp card remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Card Name" --asAdmin
 ```
 
 Removes the specified Microsoft Power Platform card owned by another user based on the name parameter without confirmation
 
 ```sh
-m365 pp card remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Card Name" --asAdmin --force
+m365 pp card remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Card Name" --asAdmin --force
 ```
 
 Removes the specified Microsoft Power Platform card owned by the currently signed-in user based on the id parameter
 
 ```sh
-m365 pp card remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e
+m365 pp card remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e
 ```
 
 Removes the specified Microsoft Power Platform card owned by the currently signed-in user based on the id parameter without confirmation
 
 ```sh
-m365 pp card remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e --force
+m365 pp card remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e --force
 ```
 
 Removes the specified Microsoft Power Platform card owned by another user based on the id parameter
 
 ```sh
-m365 pp card remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e --asAdmin
+m365 pp card remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e --asAdmin
 ```
 
 Removes the specified Microsoft Power Platform card owned by another user based on the id parameter without confirmation
 
 ```sh
-m365 pp card remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e --asAdmin --force
+m365 pp card remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e --asAdmin --force
 ```
 
 ## Response
