--- a/docs/docs/cmd/pp/chatbot/chatbot-remove.mdx
+++ b/docs/docs/cmd/pp/chatbot/chatbot-remove.mdx
@@ -13,7 +13,7 @@ m365 pp chatbot remove [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-i, --id [id]`
@@ -36,19 +36,19 @@ m365 pp chatbot remove [options]
 Removes the specified Microsoft Power Platform chatbot owned by the currently signed-in user based on name
 
 ```sh
-m365 pp chatbot remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Chatbot Name"
+m365 pp chatbot remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Chatbot Name"
 ```
 
 Removes the specified Microsoft Power Platform chatbot owned by the currently signed-in user based on id without confirmation
 
 ```sh
-m365 pp chatbot remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e --force
+m365 pp chatbot remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 9d9a13d0-6255-ed11-bba2-000d3adf774e --force
 ```
 
 Removes the specified Microsoft Power Platform chatbot owned by another user based on name
 
 ```sh
-m365 pp chatbot remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Chatbot Name" --asAdmin
+m365 pp chatbot remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Chatbot Name" --asAdmin
 ```
 
 ## Response
