--- a/docs/docs/cmd/pp/dataverse/dataverse-table-get.mdx
+++ b/docs/docs/cmd/pp/dataverse/dataverse-table-get.mdx
@@ -15,7 +15,7 @@ m365 pp dataverse table get [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment to list a table for.
 
 `-n, --name<name>`
@@ -32,13 +32,13 @@ m365 pp dataverse table get [options]
 List a table for the given environment
 
 ```sh
-m365 pp dataverse table get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "aaduser"
+m365 pp dataverse table get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "aaduser"
 ```
 
 List a table for the given environment as Admin
 
 ```sh
-m365 pp dataverse table get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "aaduser" --asAdmin
+m365 pp dataverse table get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "aaduser" --asAdmin
 ```
 
 ## Response
@@ -132,7 +132,7 @@ m365 pp dataverse table get --environment "Default-2ca3eaa5-140f-4175-8261-3272e
   <TabItem value="Markdown">
 
   ```md
-  # pp dataverse table get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "aaduser"
+  # pp dataverse table get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "aaduser"
 
   Date: 9/1/2023
 
