--- a/docs/docs/cmd/pp/dataverse/dataverse-table-list.mdx
+++ b/docs/docs/cmd/pp/dataverse/dataverse-table-list.mdx
@@ -15,7 +15,7 @@ m365 pp dataverse table list [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment to list all tables for
 
 `--asAdmin`
@@ -29,13 +29,13 @@ m365 pp dataverse table list [options]
 List all tables for the given environment
 
 ```sh
-m365 pp dataverse table list --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
+m365 pp dataverse table list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
 ```
 
 List all tables for the given environment as Admin
 
 ```sh
-m365 pp dataverse table list --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --asAdmin
+m365 pp dataverse table list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --asAdmin
 ```
 
 ## Response
@@ -130,7 +130,7 @@ m365 pp dataverse table list --environment "Default-2ca3eaa5-140f-4175-8261-3272
   <TabItem value="Markdown">
 
   ```md
-  # pp dataverse table list --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
+  # pp dataverse table list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
 
   Date: 9/1/2023
 
