--- a/docs/docs/cmd/pp/dataverse/dataverse-table-row-remove.mdx
+++ b/docs/docs/cmd/pp/dataverse/dataverse-table-row-remove.mdx
@@ -13,7 +13,7 @@ m365 pp dataverse table row remove [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment to remove a row from a table from.
 
 `-i, --id <id>`
@@ -39,25 +39,25 @@ m365 pp dataverse table row remove [options]
 Removes a row from a dataverse table in a given environment
 
 ```sh
-m365 pp dataverse table row remove --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --tableName "aadusers" --id "21d01cf4-356c-ed11-9561-000d3a4bbea4"
+m365 pp dataverse table row remove --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --tableName "aadusers" --id "21d01cf4-356c-ed11-9561-000d3a4bbea4"
 ```
 
 Removes a row from a dataverse table in a given environment as Admin
 
 ```sh
-m365 pp dataverse table row remove --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --tableName "aadusers" --id "21d01cf4-356c-ed11-9561-000d3a4bbea4" --asAdmin
+m365 pp dataverse table row remove --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --tableName "aadusers" --id "21d01cf4-356c-ed11-9561-000d3a4bbea4" --asAdmin
 ```
 
 Removes a row from a dataverse table in a given environment without prompting for confirmation
 
 ```sh
-m365 pp dataverse table row remove --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --tableName "aadusers" --id "21d01cf4-356c-ed11-9561-000d3a4bbea4" --force
+m365 pp dataverse table row remove --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --tableName "aadusers" --id "21d01cf4-356c-ed11-9561-000d3a4bbea4" --force
 ```
 
 Removes a row from a dataverse table in a given environment based on the entity set name without prompting for confirmation
 
 ```sh
-m365 pp dataverse table row remove --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --entitySetName "cr6c3_accounts" --id "21d01cf4-356c-ed11-9561-000d3a4bbea4" --force
+m365 pp dataverse table row remove --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --entitySetName "cr6c3_accounts" --id "21d01cf4-356c-ed11-9561-000d3a4bbea4" --force
 ```
 
 ## Response
