--- a/docs/docs/cmd/pp/solution/solution-get.mdx
+++ b/docs/docs/cmd/pp/solution/solution-get.mdx
@@ -15,7 +15,7 @@ m365 pp solution get [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-i --id [id]`
@@ -35,25 +35,25 @@ m365 pp solution get [options]
 Gets a specific solution in a specific environment based on name
 
 ```sh
-m365 pp solution get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "Default"
+m365 pp solution get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "Default"
 ```
 
 Gets a specific solution in a specific environment based on name as Admin
 
 ```sh
-m365 pp solution get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "Default" --asAdmin
+m365 pp solution get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "Default" --asAdmin
 ```
 
 Gets a specific solution in a specific environment based on id
 
 ```sh
-m365 pp solution get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e"
+m365 pp solution get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e"
 ```
 
 Gets a specific solution in a specific environment based on id as Admin
 
 ```sh
-m365 pp solution get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e" --asAdmin
+m365 pp solution get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e" --asAdmin
 ```
 
 ## Response
@@ -98,7 +98,7 @@ m365 pp solution get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339
   <TabItem value="Markdown">
 
   ```md
-  # pp solution get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e"
+  # pp solution get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e"
 
   Date: 9/1/2023
 
