--- a/docs/docs/cmd/pp/solution/solution-publisher-add.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-add.mdx
@@ -13,7 +13,7 @@ m365 pp solution publisher add [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-n, --name <name>`
@@ -39,13 +39,13 @@ m365 pp solution publisher add [options]
 Add a specific publisher in a specific environment
 
 ```sh
-m365 pp solution publisher add --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "Contoso" --displayName "Contoso" --prefix "new" --choiceValuePrefix 10000
+m365 pp solution publisher add --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "Contoso" --displayName "Contoso" --prefix "new" --choiceValuePrefix 10000
 ```
 
 Adds a specific publisher in a specific environment as Admin
 
 ```sh
-m365 pp solution publisher add --environment "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "Contoso" --displayName "Contoso" --prefix "new" --choiceValuePrefix 10000 --asAdmin
+m365 pp solution publisher add --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd55c5" --name "Contoso" --displayName "Contoso" --prefix "new" --choiceValuePrefix 10000 --asAdmin
 ```
 
 ## Response
