--- a/docs/docs/cmd/pp/solution/solution-publisher-get.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-get.mdx
@@ -15,7 +15,7 @@ m365 pp solution publisher get [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-i --id [id]`
@@ -35,25 +35,25 @@ m365 pp solution publisher get [options]
 Gets a specific publisher in a specific environment based on name
 
 ```sh
-m365 pp solution publisher get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "MicrosoftCorporation"
+m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "MicrosoftCorporation"
 ```
 
 Gets a specific publisher in a specific environment based on name as Admin
 
 ```sh
-m365 pp solution publisher get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "MicrosoftCorporation" --asAdmin
+m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "MicrosoftCorporation" --asAdmin
 ```
 
 Gets a specific publisher in a specific environment based on id
 
 ```sh
-m365 pp solution publisher get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e"
+m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e"
 ```
 
 Gets a specific publisher in a specific environment based on id as Admin
 
 ```sh
-m365 pp solution publisher get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e" --asAdmin
+m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "ee62fd63-e49e-4c09-80de-8fae1b9a427e" --asAdmin
 ```
 
 ## Response
@@ -95,7 +95,7 @@ m365 pp solution publisher get --environment "Default-2ca3eaa5-140f-4175-8261-32
   <TabItem value="Markdown">
 
   ```md
-  # pp solution publisher get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "d21aab70-79e7-11dd-8874-00188b01e34f"
+  # pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --id "d21aab70-79e7-11dd-8874-00188b01e34f"
   
   Date: 9/1/2023
 
