--- a/docs/docs/cmd/pp/solution/solution-publisher-remove.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-remove.mdx
@@ -13,7 +13,7 @@ m365 pp solution publisher remove [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment.
 
 `-i, --id [id]`
@@ -36,25 +36,25 @@ m365 pp solution publisher remove [options]
 Removes the specified publisher based on the name parameter
 
 ```sh
-m365 pp solution publisher remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Publisher Name"
+m365 pp solution publisher remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Publisher Name"
 ```
 
 Removes the specified publisher based on the name parameter without confirmation
 
 ```sh
-m365 pp solution publisher remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Publisher Name" --force
+m365 pp solution publisher remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Publisher Name" --force
 ```
 
 Removes the specified publisher based on the name parameter as admin
 
 ```sh
-m365 pp solution publisher remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Publisher Name" --asAdmin
+m365 pp solution publisher remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name "Publisher Name" --asAdmin
 ```
 
 Removes the specified publisher owned by the currently signed-in user based on the id parameter
 
 ```sh
-m365 pp solution publisher remove --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 00000001-0000-0000-0001-00000000009b
+m365 pp solution publisher remove --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 00000001-0000-0000-0001-00000000009b
 ```
 
 ## Response
