Updates option names. Closes #4467

--- a/docs/docs/cmd/pp/dataverse/dataverse-table-get.mdx
+++ b/docs/docs/cmd/pp/dataverse/dataverse-table-get.mdx
@@ -15,7 +15,7 @@ m365 pp dataverse table get [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment to list a table for.
 
 `-n, --name<name>`
@@ -132,7 +132,7 @@ m365 pp dataverse table get -e "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --
   <TabItem value="Markdown">
 
   ```md
-  # pp dataverse table get --environment "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "aaduser"
+  # pp dataverse table get --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --name "aaduser"
 
   Date: 9/1/2023
 
