--- a/docs/docs/cmd/pp/dataverse/dataverse-table-remove.mdx
+++ b/docs/docs/cmd/pp/dataverse/dataverse-table-remove.mdx
@@ -13,7 +13,7 @@ m365 pp dataverse table remove [options]
 ## Options
 
 ```md definition-list
-`-e, --environment <environment>`
+`-e, --environmentName <environmentName>`
 : The name of the environment to remove a table from.
 
 `-n, --name<name>`
