--- a/docs/docs/cmd/spo/listitem/listitem-attachment-list.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-attachment-list.mdx
@@ -27,7 +27,7 @@ m365 spo listitem attachment list [options]
 `--listUrl [listUrl]`
 : Server- or site-relative URL of the list. Specify either `listTitle`, `listId` or `listUrl`
 
-`--itemId <itemId>`
+`--listItemId <listItemId>`
 : ID of the list item to in question
 ```
 
@@ -35,22 +35,22 @@ m365 spo listitem attachment list [options]
 
 ## Examples
 
-Gets the attachments from list item with itemId _147_ in list with title _Demo List_ in site _https://contoso.sharepoint.com/sites/project-x_
+Gets the attachments from list item with listItemId _147_ in list with title _Demo List_ in site _https://contoso.sharepoint.com/sites/project-x_
 
 ```sh
-m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listTitle "Demo List" --itemId 147
+m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listTitle "Demo List" --listItemId 147
 ```
 
-Gets the attachments from list item with itemId _147_ in list with id _0cd891ef-afce-4e55-b836-fce03286cccf_ in site _https://contoso.sharepoint.com/sites/project-x_
+Gets the attachments from list item with listItemId _147_ in list with id _0cd891ef-afce-4e55-b836-fce03286cccf_ in site _https://contoso.sharepoint.com/sites/project-x_
 
 ```sh
-m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listId 0cd891ef-afce-4e55-b836-fce03286cccf --itemId 147
+m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listId 0cd891ef-afce-4e55-b836-fce03286cccf --listItemId 147
 ```
 
 Gets the attachments from a specific list item in a specific list obtained by server-relative URL in a specific site
 
 ```sh
-m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listUrl /sites/project-x/Documents --itemId 147
+m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/project-x --listUrl /sites/project-x/Documents --listItemId 147
 ```
 
 ## Response
@@ -94,7 +94,7 @@ m365 spo listitem attachment list --webUrl https://contoso.sharepoint.com/sites/
   <TabItem value="Markdown">
 
   ```md
-  # spo listitem attachment list --webUrl "https://contoso.sharepoint.com" --listTitle "Test" --itemId "236"
+  # spo listitem attachment list --webUrl "https://contoso.sharepoint.com" --listTitle "Test" --listItemId "236"
 
   Date: 2/20/2023
 
