Rename options. Closes #4467

--- a/docs/docs/cmd/flow/flow-enable.mdx
+++ b/docs/docs/cmd/flow/flow-enable.mdx
@@ -44,13 +44,13 @@ If the Power Automate flow with the name you specified doesn't exist, you will g
 Enables Power Automate flow owned by the currently signed-in user
 
 ```sh
-m365 flow enable --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d
+m365 flow enable --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d
 ```
 
 Enables Power Automate flow owned by another user
 
 ```sh
-m365 flow enable --environment Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --asAdmin
+m365 flow enable --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --asAdmin
 ```
 
 ## Response
