--- a/docs/docs/cmd/planner/bucket/bucket-add.mdx
+++ b/docs/docs/cmd/planner/bucket/bucket-add.mdx
@@ -49,19 +49,19 @@ When using `rosterId`, the command is based on an API that is currently in previ
 
 ## Examples
 
-Adds a Microsoft Planner bucket for a plan based on the ID with an order hint
+Adds a Microsoft Planner bucket for a plan based on its ID with an order hint
 
 ```sh
 m365 planner bucket add --name "My Planner Bucket" --planId "xqQg5FS2LkCp935s-FIFm2QAFkHM" --orderHint " !"
 ```
 
-Adds a Microsoft Planner bucket for a plan based on the title and the owner group name
+Adds a Microsoft Planner bucket for a plan based on its title and owner group name
 
 ```sh
 m365 planner bucket add --name "My Planner Bucket" --planTitle "My Planner Plan" --ownerGroupName "My Planner Group"
 ```
 
-Adds a Microsoft Planner bucket for a plan based on the roster ID
+Adds a Microsoft Planner bucket for a plan based on its Planner Roster ID
 
 ```sh
 m365 planner bucket add --name "My Planner Bucket" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI"
