--- a/docs/docs/cmd/planner/bucket/bucket-list.mdx
+++ b/docs/docs/cmd/planner/bucket/bucket-list.mdx
@@ -43,19 +43,19 @@ When using `rosterId`, the command is based on an API that is currently in previ
 
 ## Examples
 
-Lists the Microsoft Planner buckets based on the plan id
+Lists the Microsoft Planner buckets based on its plan ID
 
 ```sh
 m365 planner bucket list --planId "xqQg5FS2LkCp935s-FIFm2QAFkHM"
 ```
 
-Lists the Microsoft Planner buckets based on the plan title and owner group name
+Lists the Microsoft Planner buckets based on its plan title and owner group name
 
 ```sh
 m365 planner bucket list --planTitle "My Plan" --ownerGroupName "My Group"
 ```
 
-Lists the Microsoft Planner buckets based on the roster id
+Lists the Microsoft Planner buckets based on its Roster ID
 
 ```sh
 m365 planner bucket list --planTitle "My Plan" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI"
