--- a/docs/docs/cmd/planner/bucket/bucket-remove.mdx
+++ b/docs/docs/cmd/planner/bucket/bucket-remove.mdx
@@ -62,19 +62,19 @@ Removes the Microsoft Planner bucket by ID without confirmation
 m365 planner bucket remove --id "vncYUXCRBke28qMLB-d4xJcACtNz" --confirm
 ```
 
-Removes the Microsoft Planner bucket with a name based on the Plan ID
+Removes the Microsoft Planner bucket by its name based on the plan ID
 
 ```sh
 m365 planner bucket remove --name "My Bucket" --planId "oUHpnKBFekqfGE_PS6GGUZcAFY7b"
 ```
 
-Removes the Microsoft Planner bucket with a name based on the Plan Title and owner group name
+Removes the Microsoft Planner bucket by its name based on the plan title and owner group name
 
 ```sh
 m365 planner bucket remove --name "My Bucket" --planTitle "My Plan" --ownerGroupName "My Group"
 ```
 
-Removes the Microsoft Planner bucket with a name based on the roster ID
+Removes the Microsoft Planner bucket by its name based on the Roster ID
 
 ```sh
 m365 planner bucket remove --name "My Bucket" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI"
