--- a/docs/docs/cmd/planner/bucket/bucket-set.mdx
+++ b/docs/docs/cmd/planner/bucket/bucket-set.mdx
@@ -53,25 +53,25 @@ When using `rosterId`, the command is based on an API that is currently in previ
 
 ## Examples
 
-Updates the Microsoft Planner bucket with ID
+Updates the Microsoft Planner bucket by its ID
 
 ```sh
 m365 planner bucket set --id "vncYUXCRBke28qMLB-d4xJcACtNz" --newName "New bucket name"
 ```
 
-Updates the Microsoft Planner bucket for the given name based on the Plan title and owner group name
+Updates the Microsoft Planner bucket with a given name based on its plan title and owner group name
 
 ```sh
 m365 planner bucket set --name "My Bucket" --planTitle "My Plan" --ownerGroupName "My Group" --newName "New bucket name"
 ```
 
-Updates the Microsoft Planner bucket for the given name based on the plan title and owner group ID
+Updates the Microsoft Planner bucket with a given name based on its plan title and owner group ID
 
 ```sh
 m365 planner bucket set --name "My Bucket" --planTitle "My Plan" --ownerGroupId 00000000-0000-0000-0000-000000000000 --newName "New bucket name"
 ```
 
-Updates the Microsoft Planner bucket for the given name based on the roster ID
+Updates the Microsoft Planner bucket with a given name based on its Roster ID
 
 ```sh
 m365 planner bucket set --name "My Bucket" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI" --newName "New bucket name"
