--- a/docs/docs/cmd/planner/bucket/bucket-get.mdx
+++ b/docs/docs/cmd/planner/bucket/bucket-get.mdx
@@ -55,25 +55,25 @@ Gets the specified Microsoft Planner bucket
 m365 planner bucket get --id "5h1uuYFk4kKQ0hfoTUkRLpgALtYi"
 ```
 
-Gets the Microsoft Planner bucket based on the plan ID
+Gets the Microsoft Planner bucket based on its plan ID
 
 ```sh
 m365 planner bucket get --name "Planner Bucket A" --planId "xqQg5FS2LkCp935s-FIFm2QAFkHM"
 ```
 
-Gets the Microsoft Planner bucket based on the Plan title and owner group name
+Gets the Microsoft Planner bucket based on its plan title and owner group name
 
 ```sh
 m365 planner bucket get --name "Planner Bucket A" --planTitle "My Plan" --ownerGroupName "My Group"
 ```
 
-Gets the Microsoft Planner bucket based on the plan title and owner group ID
+Gets the Microsoft Planner bucket based on its plan title and owner group ID
 
 ```sh
 m365 planner bucket get --name "Planner Bucket A" --planTitle "My Plan" --ownerGroupId "ee0f40fc-b2f7-45c7-b62d-11b90dd2ea8e"
 ```
 
-Gets the Microsoft Planner bucket based on the roster ID
+Gets the Microsoft Planner bucket based on its Roster ID
 
 ```sh
 m365 planner bucket get --name "Planner Bucket A" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI"
