--- a/docs/docs/cmd/teams/chat/chat-member-add.mdx
+++ b/docs/docs/cmd/teams/chat/chat-member-add.mdx
@@ -36,13 +36,9 @@ m365 teams chat member add [options]
 
 ## Remarks
 
-:::info
-
 When you specify a value for `role`, consider the following:
-- it can only be used in combination with the `owner` option for internal users
-- it can only be used in combindation with the `guest` option for guest users
-
-:::
+- `owner` can only be used for internal users
+- `guest` can only be used for guest users.
 
 ## Examples
 
