Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -9,6 +9,8 @@ sidebar_position: 4
 ### Changes
 
 - renamed confirm to force [#4551](https://github.com/pnp/cli-microsoft365/issues/4551)
+- removed 'spo list label get' and 'spo list  label set' aliases [#4177](https://github.com/pnp/cli-microsoft365/issues/4177)
+- removed option 'folder' in 'spo folder list' [#4803](https://github.com/pnp/cli-microsoft365/issues/4803)
 
 ## [v6.10.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
